2003-07-09 Jim Garlick <garlick@llnl.gov>

    * etc/baytech-rpc28-nc.dev, etc/baytech-rpc3-nc.dev, etc/baytech.dev:
    Make prompt recognition less restrictive.

2003-07-01 Jim Garlick <garlick@llnl.gov>

    * etc/phantom.dev: Reflect changes in 3.0.4b firmware.

2003-06-23 Jim Garlick <garlick@llnl.gov>

    * etc/baytech-rpc3-nc.dev: New for ilx RPC3 "NC" model with new/different 
    firmware than expected in baytech.dev.

    * etc/baytech-rpc28-nc.dev: Renamed from baytech-rpc28.dev to reflect
    that this is the same "NC" firmware as above (but with 28 ports).

    * README, Makefile, powerman.spec: Cleanup.

2003-06-06 Jim Garlick <garlick@llnl.gov>

    * etc/README: New doc for specification syntax.

    * etc/parse.lex, etc/parse.y: Removed some unused tokens.

2003-06-04 Jim Garlick <garlick@llnl.gov>

    * etc/apcnew.dev: New device type for newer firmware APC masterswitches.

2003-05-20 Jim Garlick <garlick@llnl.gov>

    * etc/baytech-rpc28.dev: New

2003-05-06 Jim Garlick <garlick@llnl.gov>

    * src/{device*,parse.y}: abstract tcp- or serial-specific data in
    device_serial.c and device_tcp.c.

2003-05-05 Jim Garlick <garlick@llnl.gov>

    * src/{device.[ch],device_tcp.c,device_serial.c}: renamed 
    dev->connect_status to dev->connect_state and fixed a couple of places 
    where it was being treated as a bitmask instead of an enum.

    * src/device.[ch]: replaced dev->script_status with dev->logged_in flag
    and ExecCtx 'processing' flag.

    * src/device*: replaced conditional calls to tcp/serial connect/disconnect
    functions with function pointers.  Moved device_telnet.c into device_tcp.c.

    * src/parse.y: cleaned up host/flags parsing.

    * src/powermand.c: ignore SIGPIPE.
    
2003-05-01 Jim Garlick <garlick@llnl.gov>

    * src/parse.y: destroyStmt was trying to destroy NULL setplugstate.interps
    list.

    * src/*: Eliminate device types.  Deduce whether TCP or serial from