@@ -100,7 +100,7 @@ o APC MasterSwitch Plus (APP v2.2.0 / AOS v3.0.3) (*)
 
 o IBM RSA Remote Supervisor Adapter (T2ET16- for x335, GEET117A for x345) (*)
 
-o Rackable Systems Phantom Remote Management Module (v3.0.4) (+)
+o Rackable Systems Phantom Remote Management Module (v3.0.4b) (+)
 
 Notes:
 (+) Present in powerman test rig.
