@@ -22,6 +22,8 @@ specification "baytech-rpc28-nc" {
 		send "exit\r\n"
 	}
 	script status_all {
+		send "\r\n"
+		expect ">"
 		send "status\r\n"
 		expect "Internal Temperature[^C]+ C"
 		foreachplug {
@@ -31,18 +33,26 @@ specification "baytech-rpc28-nc" {
 		expect ">"
 	}
 	script on {
+		send "\r\n"
+		expect ">"
 		send "on %s\r\n"
 		expect ">"
 	}
 	script on_all {
+		send "\r\n"
+		expect ">"
 		send "on 0\r\n"
 		expect ">"
 	}
 	script off {
+		send "\r\n"
+		expect ">"
 		send "off %s\r\n"
 		expect ">"
 	}
 	script off_all {
+		send "\r\n"
+		expect ">"
 		send "off 0\r\n"
 		expect ">"
 	}
@@ -50,6 +60,8 @@ specification "baytech-rpc28-nc" {
 # This doesn't match PowerMan's semantics for cycle, so explicitly power
 # off then on.
 	script cycle {
+		send "\r\n"
+		expect ">"
 		send "off %s\r\n"
 		expect ">"
 		delay 2
@@ -57,6 +69,8 @@ specification "baytech-rpc28-nc" {
 		expect ">"
 	}
 	script cycle_all {
+		send "\r\n"
+		expect ">"
 		send "off 0\r\n"
 		expect ">"
 		delay 2
