@@ -22,12 +22,17 @@ specification "baytech-rpc3-nc" {
 	plug name { "1" "2" "3" "4" "5" "6" "7" "8" }
 
 	script login {
+		send "\r\n"
 		expect ">"
 	}
 	script logout {
+		send "\r\n"
+		expect ">"
 		send "exit\r\n"
 	}
 	script status_all {
+		send "\r\n"
+		expect ">"
 		send "status\r\n"
 		expect "Circuit Breaker:[^\n]*\r\n"	
 		foreachplug {
@@ -37,18 +42,26 @@ specification "baytech-rpc3-nc" {
 		expect ">"
 	}
 	script on {
+		send "\r\n"
+		expect ">"
 		send "on %s\r\n"
 		expect ">"
 	}
 	script on_all {
+		send "\r\n"
+		expect ">"
 		send "on 0\r\n"
 		expect ">"
 	}
 	script off {
+		send "\r\n"
+		expect ">"
 		send "off %s\r\n"
 		expect ">"
 	}
 	script off_all {
+		send "\r\n"
+		expect ">"
 		send "off 0\r\n"
 		expect ">"
 	}
@@ -56,6 +69,8 @@ specification "baytech-rpc3-nc" {
 # This doesn't match PowerMan's semantics for cycle, so explicitly power
 # off then on.
 	script cycle {
+		send "\r\n"
+		expect ">"
 		send "off %s\r\n"
 		expect ">"
 		delay 2
@@ -63,6 +78,8 @@ specification "baytech-rpc3-nc" {
 		expect ">"
 	}
 	script cycle_all {
+		send "\r\n"
+		expect ">"
 		send "off 0\r\n"
 		expect ">"
 		delay 2
