@@ -100,7 +100,8 @@ bool tcp_finish_connect(Device * dev)
     int len = sizeof(err);
 
     assert(dev->connect_state == DEV_CONNECTING);
-    rc = getsockopt(dev->fd, SOL_SOCKET, SO_ERROR, &error, &len);
+    assert(dev->ifd == dev->ofd);
+    rc = getsockopt(dev->ifd, SOL_SOCKET, SO_ERROR, &error, &len);
     /*
      *  If an error occurred, Berkeley-derived implementations
      *    return 0 with the pending error in 'err'.  But Solaris
@@ -134,7 +135,8 @@ bool tcp_connect(Device * dev)
 
     assert(dev->magic == DEV_MAGIC);
     assert(dev->connect_state == DEV_NOT_CONNECTED);
-    assert(dev->fd == NO_FD);
+    assert(dev->ifd == NO_FD);
+    assert(dev->ofd == NO_FD);
 
     tcp = (TcpDev *)dev->data;
 
@@ -148,22 +150,22 @@ bool tcp_connect(Device * dev)
     hints.ai_socktype = SOCK_STREAM;
     Getaddrinfo(tcp->host, tcp->port, &hints, &addrinfo);
 
-    dev->fd = Socket(addrinfo->ai_family, addrinfo->ai_socktype,
+    dev->ifd = dev->ofd = Socket(addrinfo->ai_family, addrinfo->ai_socktype,
                      addrinfo->ai_protocol);
 
-    dbg(DBG_DEVICE, "tcp_connect: %s on fd %d", dev->name, dev->fd);
+    dbg(DBG_DEVICE, "tcp_connect: %s on fd %d", dev->name, dev->ifd);
 
     /* set up and initiate a non-blocking connect */
 
     sock_opt = 1;
-    Setsockopt(dev->fd, SOL_SOCKET, SO_REUSEADDR,
+    Setsockopt(dev->ifd, SOL_SOCKET, SO_REUSEADDR,
                &(sock_opt), sizeof(sock_opt));
-    fd_settings = Fcntl(dev->fd, F_GETFL, 0);
-    Fcntl(dev->fd, F_SETFL, fd_settings | O_NONBLOCK);
+    fd_settings = Fcntl(dev->ifd, F_GETFL, 0);
+    Fcntl(dev->ifd, F_SETFL, fd_settings | O_NONBLOCK);
 
     /* Connect - 0 = connected, -1 implies EINPROGRESS */
     dev->connect_state = DEV_CONNECTING;
-    if (Connect(dev->fd, addrinfo->ai_addr, addrinfo->ai_addrlen) >= 0)
+    if (Connect(dev->ifd, addrinfo->ai_addr, addrinfo->ai_addrlen) >= 0)
         tcp_finish_connect(dev);
     freeaddrinfo(addrinfo);
 
@@ -177,14 +179,15 @@ void tcp_disconnect(Device * dev)
 {
     assert(dev->connect_state == DEV_CONNECTING
            || dev->connect_state == DEV_CONNECTED);
+    assert(dev->ifd == dev->ofd);
 
     err(FALSE, "tcp_disconnect: %s: disconnected", dev->name);
-    dbg(DBG_DEVICE, "tcp_disconnect: %s on fd %d", dev->name, dev->fd);
+    dbg(DBG_DEVICE, "tcp_disconnect: %s on fd %d", dev->name, dev->ifd);
 
     /* close socket if open */
-    if (dev->fd >= 0) {
-        Close(dev->fd);
-        dev->fd = NO_FD;
+    if (dev->ifd >= 0) {
+        Close(dev->ifd);
+        dev->ifd = dev->ofd = NO_FD;
     }
 }
 
